--- a/TataSteelMachineFailurePrediction(Classification).ipynb
+++ b/TataSteelMachineFailurePrediction(Classification).ipynb
@@ -34,6 +34,29 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **GitHub Link -**"
+      ],
+      "metadata": {
+        "id": "ampEkftnHqNm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Provide your GitHub Link here.\n",
+        "\n",
+        "My Github profile link - https://github.com/Vishesh-Alag\n",
+        "\n",
+        "This Project Github link - https://github.com/Vishesh-Alag/Tata-Steel-Machine-Failure-Prediction-Classification\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vXbnQjzVHqNo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Project Name**    - Tata Steel Machine Failure Prediction / Classification (0: Not Fail / 1: Fail) and What Type of Failure\n"
       ],
       "metadata": {
@@ -364,7 +387,7 @@
       "metadata": {
         "id": "M8Vqi-pPk-HR"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -387,7 +410,7 @@
       "metadata": {
         "id": "4CkvbW_SlZ_R"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +437,7 @@
         },
         "outputId": "f9027306-5031-4eeb-d2ab-63ddc206924b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,7 +825,7 @@
         "id": "RE0yKqzXSsO4",
         "outputId": "f9e12633-b68e-44a0-e583-749f4c4cc9d7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1193,7 +1216,7 @@
         },
         "outputId": "cc5117d6-1cb8-4f32-a286-78ef7bd64439"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1228,7 +1251,7 @@
         },
         "outputId": "e8ff1e31-f220-4feb-b387-6cb9496d564e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1273,7 +1296,7 @@
         "id": "QccyBraXTY7N",
         "outputId": "03f61287-d4a9-478d-949e-6ac95f33ce29"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1721,7 +1744,7 @@
         },
         "outputId": "76e92ebc-2500-423f-f7cb-aeca0a6f00f6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1756,7 +1779,7 @@
         },
         "outputId": "34e7b08f-5a5e-4a1c-9e46-b491edd357f2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1885,7 +1908,7 @@
         },
         "outputId": "04e2b29f-c587-4065-e202-684d1cd2ea7d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1948,7 +1971,7 @@
         },
         "outputId": "a38d2d40-ccfe-424e-89de-1114930c87f5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1990,7 +2013,7 @@
         },
         "outputId": "26e70120-7ac3-4d7b-f199-d4bf6d44c8bf"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2539,7 +2562,7 @@
         },
         "outputId": "cd350894-ec61-4430-8a87-0c905e3d45c2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2759,7 +2782,7 @@
         },
         "outputId": "71f85354-6bda-41ea-e573-52b4ef0c2051"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3199,7 +3222,7 @@
         "id": "GffLXZaUYIpu",
         "outputId": "046efcc9-0272-447f-e867-0469d342045b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3289,7 +3312,7 @@
         },
         "outputId": "3a93b3a3-0329-4635-84c7-b0e152785764"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3425,7 +3448,7 @@
         },
         "outputId": "9370235c-6b6d-4609-e495-b9d9e3e010cc"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3568,7 +3591,7 @@
         },
         "outputId": "cc19ff2f-7db2-4e69-f35e-8d614693a023"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3710,7 +3733,7 @@
         },
         "outputId": "1f0fa7de-ca2a-4922-a756-4b5a9f7081a6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3849,7 +3872,7 @@
         },
         "outputId": "57e13132-e8ed-4811-c890-480c1a9db2e8"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3986,7 +4009,7 @@
         },
         "outputId": "917c9555-1c8a-461b-98cb-705348ac3cf2"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4124,7 +4147,7 @@
         },
         "outputId": "4a5cc46b-9805-4c6a-9c67-82cbc140eb43"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4260,7 +4283,7 @@
         },
         "outputId": "7336fcae-bc0d-4dca-b97f-52320cc574e5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4395,7 +4418,7 @@
         },
         "outputId": "e28a1ed7-42ac-4747-f0d2-005a13fa89e3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4532,7 +4555,7 @@
         },
         "outputId": "58c1aa30-90b1-4660-8ab0-35433ffa3dc5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4668,7 +4691,7 @@
         },
         "outputId": "26daf5fd-412a-4c29-9ba1-43486e12703d"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4807,7 +4830,7 @@
         },
         "outputId": "431f5e1e-0be4-41a6-8b30-395523f5c58e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4947,7 +4970,7 @@
         },
         "outputId": "fa577f20-25e0-4beb-daff-383ab6a0e523"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5109,7 +5132,7 @@
         },
         "outputId": "8c60fa44-d60a-4d49-9c75-5a6158748299"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5217,7 +5240,7 @@
         },
         "outputId": "cf37f673-0b5e-49ea-970b-c1df88ad8482"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5342,7 +5365,7 @@
         "id": "r6XqkEXWiOxw",
         "outputId": "721ab554-1033-42f2-b11a-0e8c32edfdd2"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5543,7 +5566,7 @@
         "id": "Z1C1nezUjiJR",
         "outputId": "36bc34e3-b554-45f7-dc72-285ff429bb8e"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5730,7 +5753,7 @@
         "id": "MTqCtpxUkykf",
         "outputId": "778dba93-5390-4ee5-98f1-d0adf6ce57c7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5924,7 +5947,7 @@
       "metadata": {
         "id": "fj1hR4RdZEXD"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6030,7 +6053,7 @@
         },
         "outputId": "894467cd-c4b1-4b50-a4e5-4f4c7c77f61e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6171,7 +6194,7 @@
         },
         "outputId": "24136957-9050-4636-fdd6-143426bf6912"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6318,7 +6341,7 @@
         },
         "outputId": "425c14bc-e339-4914-eae4-8f80801e8bad"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6406,7 +6429,7 @@
       "metadata": {
         "id": "ucdcYpIAYYe2"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6436,7 +6459,7 @@
         "id": "jYLPScSQaVZy",
         "outputId": "54bfca8a-8c0b-4b54-bec7-12dd2e5863cb"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6846,7 +6869,7 @@
         },
         "outputId": "bee32a29-bf84-48d0-ea63-aed0639f3c64"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7018,7 +7041,7 @@
         },
         "outputId": "758e58bc-0be6-4eb7-c5a8-47473e70355d"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7114,7 +7137,7 @@
       "metadata": {
         "id": "21JmIYMG2hEo"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7130,7 +7153,7 @@
         "id": "WzOskKC2c0pc",
         "outputId": "ff2fb995-6d20-465e-e7a4-f83dcde29666"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7616,7 +7639,7 @@
       "metadata": {
         "id": "h1qC4yhBApWC"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7697,7 +7720,7 @@
         },
         "outputId": "665913d3-a8ca-4cda-d0c8-7912fdae2818"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7877,7 +7900,7 @@
         },
         "outputId": "91a06d1d-cb8c-46e6-d92b-0bcad0c21aec"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8332,7 +8355,7 @@
         "id": "4x-SlR-fzjJ6",
         "outputId": "7c4e4311-fd23-47eb-d2c4-c8b548d0da62"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8365,7 +8388,7 @@
         "id": "zXyyE8o-x_PW",
         "outputId": "d2bebe74-19d1-4295-a507-941b0e4db360"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8514,7 +8537,7 @@
         },
         "outputId": "0eafcabe-48f6-4f8f-8e2f-9f661a1a609b"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8616,7 +8639,7 @@
         },
         "outputId": "60eecfde-8200-4cb2-cb23-a3ea3137914e"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8673,7 +8696,7 @@
         },
         "outputId": "151efe1b-99a9-4a52-b529-1550fbd21805"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8797,7 +8820,7 @@
         },
         "outputId": "49509bea-b86c-42cb-ab85-22f07975e092"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8894,7 +8917,7 @@
         },
         "outputId": "bd3cf844-afc4-4eee-e4b9-f9067058e827"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8963,7 +8986,7 @@
         "id": "-9Sm190NhDYB",
         "outputId": "1ffab9b1-bf8a-4c8e-af55-a7f90b886844"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9099,7 +9122,7 @@
         },
         "outputId": "c751e544-3dee-419c-ee28-35edbad79aa0"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9419,7 +9442,7 @@
         },
         "outputId": "ad0a7fd6-64cc-4b15-9d62-1244666b7d16"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9992,7 +10015,7 @@
         },
         "outputId": "9b4a4c9a-4690-4bdc-cbc1-5d3f6b780f94"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10354,7 +10377,7 @@
         },
         "outputId": "b8e88aa5-ecd2-4653-f952-534a7b89e103"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10968,7 +10991,7 @@
         },
         "outputId": "f611d406-d2be-4bb5-fa2e-39d3f7df81aa"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11383,7 +11406,7 @@
         },
         "outputId": "1654a86d-77f8-44dd-8edf-16e923673ea4"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11514,7 +11537,7 @@
         },
         "outputId": "530067a4-d62c-4ed6-8d00-60da23070a65"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11681,7 +11704,7 @@
       "metadata": {
         "id": "j2x-3x55KOXI"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11796,7 +11819,7 @@
         "id": "BNVLzmlfQhMC",
         "outputId": "36974081-c847-4f5b-af42-84716206e93f"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12078,7 +12101,7 @@
         "id": "OUx-AEddU66D",
         "outputId": "0289da7b-4a28-4977-a330-2a0a5b9e4fcc"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12280,7 +12303,7 @@
         "id": "LKj5Vm3JX0-f",
         "outputId": "546c3f2c-004f-4498-8547-2d82c1e59f14"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
